<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backlastnew"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="131dp"
        android:layout_height="42dp"
        android:text="Settings"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="25dp"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account Settings"
        android:layout_marginTop="107dp"
        android:layout_marginLeft="55dp"
        android:textSize="20dp"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_navigate_next_24"
        android:layout_gravity="end"
        android:layout_marginRight="30dp"
        android:layout_marginTop="150dp"
        />

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Password"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="55dp"
        android:textSize="20dp"/>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_navigate_next_24"
        android:layout_gravity="end"
        android:layout_marginRight="30dp"
        android:layout_marginTop="200dp"
        />

    <TextView
        android:id="@+id/editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Prodile"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="55dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/changePreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_preferences"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="55dp"
        android:textSize="20dp"/>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_navigate_next_24"
        android:layout_gravity="end"
        android:layout_marginRight="30dp"
        android:layout_marginTop="250dp"
        />
    <TextView
        android:id="@+id/SignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="55dp"
        android:textSize="20dp"/>



    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/OtherSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_settings"
        android:layout_marginTop="357dp"
        android:layout_marginLeft="55dp"
        android:textSize="20dp"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_navigate_next_24"
        android:layout_gravity="end"
        android:layout_marginRight="30dp"
        android:layout_marginTop="400dp"
        />

    <TextView
        android:id="@+id/Notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="55dp"
        android:textSize="20dp"/>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_navigate_next_24"
        android:layout_gravity="end"
        android:layout_marginRight="30dp"
        android:layout_marginTop="450dp"
        />

    <TextView
        android:id="@+id/Language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_settings"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="55dp"
        android:textSize="20dp"/>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_navigate_next_24"
        android:layout_gravity="end"
        android:layout_marginRight="30dp"
        android:layout_marginTop="250dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="550dp"
        android:text="@string/go_to_profile" />


</FrameLayout>
